fix transition firefox

--- a/app/styles/modules/_toolbar.styl
+++ b/app/styles/modules/_toolbar.styl
@@ -1,9 +1,13 @@
 .mod-toolbar
+  overflow: hidden;
   transition: height .3s
   -moz-transition: height .3s
   -webkit-transition-timing-function: ease-out;
   -moz-transition-timing-function: ease-out;
   transition-timing-function: ease-out;
+
+  p
+    margin 0;
 
   .grid-2
     float right
